Ensure the bottom of dashboard panes is visible
Related issue:
- https://github.com/uBlockOrigin/uBlock-issues/issues/1304

On small displays, not being able to scroll down
could become a usability issue.

--- a/src/css/3p-filters.css
+++ b/src/css/3p-filters.css
@@ -2,6 +2,9 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
     }
+body {
+    margin-bottom: 6rem;
+    }
 #actions {
     background-color: var(--default-surface);
     padding: var(--default-gap-small) 0 var(--default-gap-xsmall) 0;
