--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,3 +1,6 @@
+body {
+    margin-bottom: 6rem;
+    }
 .entries {
     margin: 0.5em 0;
     margin-inline-start: 2em;
