--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -1,3 +1,6 @@
+body {
+    margin-bottom: 6rem;
+    }
 .synopsis {
     font-size: 90%;
     }
